--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <td>Beverly Hills</td>
                     <td>45</td>
                     <td>10</td>
-                    <td></td>
+                    <td>47</td>
                 </tr>
             </tbody>
         </table>
@@ -68,6 +68,7 @@
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script type="text/javascript" src="assets/javascript/javascript.js"></script>
 </body>
 
